<resources>
    <string name="app_name">PSS Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email-id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? <b>Register Now</b></string>
    <string name="email">Email</string>
    <string name="email_hint">Email id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register_now">Register Now</string>
    <string name="already_have_an_account_login_now">Already have an account? <b>Login Now</b></string>

    <string name="Bureau">Select Bureau</string>
    <string name="SelectJob">Select Job</string>
    <string name="Address">Address :</string>
    <string name="Tag_Name">Tag Name :</string>
    <string name="descriptiom">Description :</string>
    <string name="SelectEntryPoint">Select Entry Point</string>
    <string name="image_permission">You have declined this permission.You must approve this permission in the app settings on your device.</string>
    <string name="Hint_CheckpointName">Checkpoint Name</string>
    <string name="Hint_Address">Address</string>
    <string name="Hint_Bureau">Bureau</string>
    <string name="Hint_CheckpointDes">Checkpoint Description</string>
    <string name="add_user">Add User</string>
    <string name="allowed_additional_file_formats_txt">File Formats Allowed: *.jpeg, *.jpg, *.png,  *.pdf, *.doc (Maximum size: 5MB)</string>
    <string name="api_key">changeme</string>

    <string-array name="jobResults_array">
        <item>Nothing to report - all good</item>
        <item>I need to report an incident</item>
        <item>Lock/Unlock job</item>
        <item>Escort details</item>
        <item>Random patrol with pictures</item>
    </string-array>

    <string-array name="incidentTypes_array">
        <item>-Select-</item>
        <item>Break in (incident)</item>
        <item>Property damage (incident)</item>
        <item>Person on site (incident)</item>
        <item>Violent behaviour (incident)</item>
        <item>Medical condition (incident)</item>
        <item>Other (describe in comments)</item>
    </string-array>

    <string-array name="severity_array">
        <item>-Select-</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>