<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout

    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/pssimg" />

    <LinearLayout
        android:id="@+id/linearLayour"
        android:layout_width="fill_parent"
        android:layout_height="360.0dip"
        android:layout_below="@id/imageView2"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/et_id"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/roundBox"
            android:layout_below="@id/linearLayour"
            android:background="@drawable/roundborder"
            android:gravity="center"
            android:hint="ID"
            android:textColorHint="@color/black"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_CheckpointName"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/roundBox"
            android:layout_below="@id/et_id"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/roundborder"
            android:gravity="center"
            android:hint="@string/Hint_CheckpointName"
            android:textColorHint="@color/black"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_Address"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/roundBox"
            android:layout_below="@id/et_CheckpointName"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/roundborder"
            android:gravity="center"
            android:hint="@string/Hint_Address"
            android:textColorHint="@color/black"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_Bureau"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/roundBox"
            android:layout_below="@id/et_Bureau"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/roundborder"
            android:gravity="center"
            android:hint="@string/Hint_Bureau"
            android:textColorHint="@color/black"
            android:textSize="18.0sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/et_CheckpointDescription"
            android:layout_width="fill_parent"
            android:layout_height="100.0dip"
            android:layout_below="@id/et_Address"
            android:layout_marginTop="15.0dip"
            android:background="@drawable/roundborder"
            android:hint="@string/Hint_CheckpointDes"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_write"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayour"
        android:layout_marginLeft="20.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginRight="20.0dip"
        android:text="Write to tag" />
</RelativeLayout>
</androidx.core.widget.NestedScrollView>